# Army-API

./: .gitignore  LICENSE  README.md  api.py  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: ci.yml  test.yml
db/: tokens.db  users.db
