[project]
name = "army-api"
version = "0.1.0"
description = "This is a project for fun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
